# autotest-practice

./: .gitignore  README.md  config.py  metamasklogin.py  pyproject.toml  requirements.txt  shipper.py
com/cargolink/objects/: carrier_objects.py  common_objects.py  shipper_objects.py
com/cargolink/objects/carrier/: create_fo_objects.py
com/cargolink/test_cases/: carrier_test_cases.py  common_test_cases.py  shipper_test_cases.py
com/cargolink/test_cases/carrier/: create_freight_offer.py
com/cargolink/tests/: carrier_test.py  common_test.py  shipper_test.py
com/impactlab/objects/: common_objects.py
com/impactlab/test_cases/: common_test_cases.py
com/impactlab/tests/: common_test.py
com/new_project/objects/: common_objects.py
com/new_project/test_cases/: common_test_cases.py
com/new_project/tests/: common_test.py
com/practice/objects/: common_objects.py
com/practice/test_cases/: common_test_cases.py
com/practice/tests/: common_test.py
mock_pages/: index.html  popup1.html  popup2.html  popup3.html
